# nos-cpp

./: .ycm_extra_conf.py  AgentConnector.hpp  CMakeLists.txt  NetObj.hpp  README  agent.cpp  build.sh
KVStoreExample/: ClientRegistrar.cpp  KVStore.hpp  KVStoreGenerated.hpp  Makefile  Registrar.cpp  client.cpp  server.cpp
bm/: FooClientProxy.cpp  FooPack.cpp  FooPack.hpp  FooProxy.cpp  FooProxy.hpp  FooServerProxy.cpp  Makefile  NOSClient.cpp  NOSClient.hpp  NOSClientExample.cpp  NOSCommon.cpp  NOSCommon.hpp  NOSDaemon.cpp  NOSDaemon.hpp  NOSDaemonExample.cpp  RPCExample.cpp  RPCRequest.cpp  RPCRequest.hpp  RPCResponse.cpp  RPCResponse.hpp  SerializableClosure.hpp  SerializableClosureExample.cpp  SerializationExample.cpp  Serializer.hpp  readme
bo/: Agent.cpp  Agent.hpp  BaseA.hpp  BaseAGenerated.hpp  BaseB.hpp  BaseBGenerated.hpp  ClientObj.hpp  Codes.hpp  Makefile  NOSAgent.cpp  NOSAgent.hpp  NOSAgentTypeUtil.cpp  NOSAgentTypeUtil.hpp  NOSClient.cpp  NOSClient.hpp  NOSClientTypeUtil.cpp  NOSClientTypeUtil.hpp  NOSCommon.hpp  NetObj.hpp  RPCRequest.cpp  RPCRequest.hpp  RPCResponse.cpp  Serialize.hpp  Test.cpp  Test.hpp  TypeUtil.cpp  TypeUtil.hpp  test.cpp  testclient.cpp  testserver.cpp
example/: ClientAgent.hpp  MyClass.hpp  MyClass_Agent.hpp  MyClass_Client.hpp
idlgen/: AstParser.cpp  AstParser.hpp  CMakeLists.txt  ClassRep.cpp  ClassRep.hpp  FieldRep.cpp  FieldRep.hpp  FunctionRep.cpp  FunctionRep.hpp  main.cpp
idlgen/ctemplate/: AdditionalInfo.txt  CMakeLists.txt
idlgen/ctemplate/vsprojects/compile_test/: compile_test.vcproj
idlgen/ctemplate/vsprojects/diff_tpl_auto_escape/: diff_tpl_auto_escape.vcproj
idlgen/ctemplate/vsprojects/generate_fsm_c_test/: generate_fsm_c_test.vcproj
idlgen/ctemplate/vsprojects/htmlparser_test/: htmlparser_test.vcproj
idlgen/ctemplate/vsprojects/libctemplate/: libctemplate.vcproj
idlgen/ctemplate/vsprojects/make_tpl_varname_h/: make_tpl_varname_h.vcproj
idlgen/ctemplate/vsprojects/statemachine_test/: statemachine_test.vcproj
idlgen/ctemplate/vsprojects/template_cache_test/: template_cache_test.vcproj
idlgen/ctemplate/vsprojects/template_dictionary_unittest/: template_dictionary_unittest.vcproj
idlgen/ctemplate/vsprojects/template_modifiers_unittest/: template_modifiers_unittest.vcproj
idlgen/ctemplate/vsprojects/template_regtest/: template_regtest.vcproj
idlgen/ctemplate/vsprojects/template_setglobals_unittest/: template_setglobals_unittest.vcproj
idlgen/ctemplate/vsprojects/template_test_util_test/: template_test_util_test.vcproj
idlgen/ctemplate/vsprojects/template_unittest/: template_unittest.vcproj
idlgen/ctemplate/vsprojects/template_unittest_static/: template_unittest_static.vcproj
idlgen/tpl/: client_registrar.tpl  generated.tpl  registrar.tpl
netobj_classes/: BaseA.hpp  BaseB.hpp  KVStore.hpp  PaxosNode.hpp
nos/: BaseAGenerated.hpp  BaseBGenerated.hpp  ClientRegistrar.cpp  Makefile  NOSAgent.cpp  NOSAgentTypeUtil.cpp  NOSClient.cpp  NOSClient.hpp  NOSClientTypeUtil.cpp  NOSClientTypeUtil.hpp  NOSCommon.cpp  NOSCommon.hpp  RPCRequest.cpp  RPCResponse.hpp  Registrar.cpp  Serializer.hpp  TupleFunctional.hpp  testclient.cpp  testclient.out  testserver.cpp  testserver.out
nos/tcpsockets/: client.cpp  server.cpp  tcpacceptor.h  tcpconnector.h  (+1 more)
paxos/: Acceptor.hpp  AcceptorGenerated.hpp  ClientRegistrar.cpp  Makefile  PaxosNode.hpp  Registrar.cpp  logger.cpp
tcpsockets/: Makefile.library  tcpacceptor.cpp  tcpconnector.cpp  tcpstream.cpp
